<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="60dp"
        android:layout_marginTop="?attr/actionBarSize">
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="30dp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileImg"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/placeholder"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#A9E1E1E4"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txt_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/usr_full_name"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/usr_full_name"
                        android:inputType="text"
                        android:background="@drawable/blue_border"
                        android:textSize="14dp"
                        android:maxLines="1"
                        android:textColor="#444444"
                        android:textColorHint="@android:color/darker_gray"
                    />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/usr_gender"/>
                    <RadioGroup
                        android:id="@+id/rdo_gender"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <RadioButton
                            android:id="@+id/rdo_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/usr_male"
                            android:checked="true" />

                        <RadioButton
                            android:id="@+id/rdo_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/usr_female" />
                    </RadioGroup>
                </LinearLayout>


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/usr_rls"/>
                    <RadioGroup
                        android:id="@+id/rdo_rls"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <RadioButton
                            android:id="@+id/rdo_single"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/usr_single"
                            android:checked="true" />

                        <RadioButton
                            android:id="@+id/rdo_marry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/usr_marry" />
                    </RadioGroup>
                </LinearLayout>


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/usr_birthday"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/usr_birthday"
                        android:inputType="text"
                        android:background="@drawable/blue_border"
                        android:textSize="14dp"
                        android:maxLines="1"
                        android:textColor="#444444"
                        android:textColorHint="@android:color/darker_gray"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/usr_language"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/usr_language"
                        android:inputType="text"
                        android:background="@drawable/blue_border"
                        android:textSize="14dp"
                        android:maxLines="1"
                        android:textColor="#444444"
                        android:textColorHint="@android:color/darker_gray"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/usr_nal"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/usr_nal"
                        android:inputType="text"
                        android:background="@drawable/blue_border"
                        android:textSize="14dp"
                        android:maxLines="1"
                        android:textColor="#444444"
                        android:textColorHint="@android:color/darker_gray"
                    />
                </LinearLayout>


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/usr_fblink"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/usr_fb"
                        android:inputType="text"
                        android:background="@drawable/blue_border"
                        android:textSize="14dp"
                        android:maxLines="1"
                        android:textColor="#444444"
                        android:textColorHint="@android:color/darker_gray"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/usr_workphone"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/usr_workphone"
                        android:inputType="text"
                        android:background="@drawable/blue_border"
                        android:textSize="14dp"
                        android:maxLines="1"
                        android:textColor="#444444"
                        android:textColorHint="@android:color/darker_gray"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/usr_handphone"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/usr_handphone"
                        android:inputType="text"
                        android:background="@drawable/blue_border"
                        android:textSize="14dp"
                        android:maxLines="1"
                        android:textColor="#444444"
                        android:textColorHint="@android:color/darker_gray"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/usr_addr"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/usr_addr"
                        android:background="@drawable/blue_border"
                        android:textSize="14dp"
                        android:maxLines="3"
                        android:textColor="#444444"
                        android:inputType="text|textMultiLine"
                        android:gravity="top"
                        android:textColorHint="@android:color/darker_gray"
                        />
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:background="#DDDDDD"
        android:padding="5dp"
        android:layout_margin="0dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_profile_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save"
            android:padding="10dp"
        />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>